--- a/VisualStudio/osgAL/osgAL.vcproj
+++ b/VisualStudio/osgAL/osgAL.vcproj
@@ -77,7 +77,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="osg.lib osgDB.lib osgutil.lib OpenThreadsWin32.lib"
+				AdditionalDependencies="osg.lib osgDB.lib osgutil.lib openthreads.lib"
 				OutputFile="../../bin/osgAL.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -173,7 +173,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="osgd.lib osgDBd.lib osgutild.lib OpenThreadsWin32d.lib"
+				AdditionalDependencies="osgd.lib osgDBd.lib osgutild.lib openthreadsd.lib"
 				OutputFile="../../bin/osgALd.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
