--- a/VisualStudio/openalpp/openalpp.vcproj
+++ b/VisualStudio/openalpp/openalpp.vcproj
@@ -76,7 +76,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="osgdbd.lib osgd.lib openthreadswin32d.lib alut.lib openal32.lib winmm.lib vorbisfile_d.lib ogg_d.lib"
+				AdditionalDependencies="osgdbd.lib osgd.lib openthreadsd.lib alut.lib openal32.lib winmm.lib vorbisfile_d.lib ogg_d.lib"
 				OutputFile="../../bin/$(ProjectName)d.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -173,7 +173,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="osgdb.lib osg.lib openthreadswin32.lib alut.lib openal32.lib vorbisfile.lib ogg.lib"
+				AdditionalDependencies="osgdb.lib osg.lib openthreads.lib alut.lib openal32.lib vorbisfile.lib ogg.lib"
 				OutputFile="../../bin/$(ProjectName).dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
