--- a/VisualStudio/examples/osgalocclude/Example_osgalocclude.vcproj
+++ b/VisualStudio/examples/osgalocclude/Example_osgalocclude.vcproj
@@ -71,7 +71,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="osggad.lib  osgd.lib osgproducerd.lib osgutild.lib osgdbd.lib"
+				AdditionalDependencies="osggad.lib  osgd.lib osgviewerd.lib osgutild.lib osgdbd.lib"
 				OutputFile="../../../bin/osgaloccluded.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -166,7 +166,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="osgga.lib glu32.lib opengl32.lib osg.lib osgproducer.lib osgutil.lib osgAL.lib osgdb.lib"
+				AdditionalDependencies="osgga.lib glu32.lib opengl32.lib osg.lib osgviewer.lib osgutil.lib osgAL.lib osgdb.lib"
 				OutputFile="../../../bin/osgalocclude.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
