--- a/Makefile.am
+++ b/Makefile.am
@@ -18,6 +18,7 @@
 #
 MAINTAINERCLEANFILES = \
 	Makefile.in \
+	configure \
 	aclocal.m4 \
 	config/config.guess \
 	config/config.sub \
@@ -30,6 +31,9 @@ MAINTAINERCLEANFILES = \
 SUBDIRS = src include examples
 
 EXTRA_DIST = \
+	autogen.sh \
+	runme.bat \
+	howtobuild_vs2003.bat \
 	diff_ignore \
 	osgal.pc.in \
 	config/ccache.m4 \
@@ -39,11 +43,58 @@ EXTRA_DIST = \
 	$(wildcard data/*.ac) \
 	$(wildcard data/*.bat) \
 	doc/doxygen.cfg \
-	doc/index.html
+	doc/index.html \
+	VisualStudio/osgPlugin_osgAL/osgPlugin_osgAL.dsp \
+	VisualStudio/osgPlugin_osgAL/osgPlugin_osgAL-vc7.vcproj \
+	VisualStudio/osgPlugin_osgAL/osgPlugin_osgAL.vcproj \
+	VisualStudio/openalpp/openalpp.vcproj \
+	VisualStudio/openalpp/openalpp.sln \
+	VisualStudio/openalpp/openalpp.dsp \
+	VisualStudio/openalpp/openalpp-vc7.vcproj \
+	VisualStudio/examples/osgalocclude/Example_osgalocclude.vcproj \
+	VisualStudio/examples/osgalocclude/Example_osgalocclude.dsp \
+	VisualStudio/examples/osgalocclude/Example_osgalocclude-vc7.vcproj \
+	VisualStudio/examples/openalpp/moving-vc7.vcproj \
+	VisualStudio/examples/openalpp/multiple.vcproj \
+	VisualStudio/examples/openalpp/playOgg-vc7.vcproj \
+	VisualStudio/examples/openalpp/capture-vc7.vcproj \
+	VisualStudio/examples/openalpp/testfstream.dsp \
+	VisualStudio/examples/openalpp/playOgg.dsp \
+	VisualStudio/examples/openalpp/playOgg.vcproj \
+	VisualStudio/examples/openalpp/simple.dsp \
+	VisualStudio/examples/openalpp/testfstream.vcproj \
+	VisualStudio/examples/openalpp/multiple.dsp \
+	VisualStudio/examples/openalpp/simple.vcproj \
+	VisualStudio/examples/openalpp/multiple-vc7.vcproj \
+	VisualStudio/examples/openalpp/moving.vcproj \
+	VisualStudio/examples/openalpp/multiple_oggstreams-vc7.vcproj \
+	VisualStudio/examples/openalpp/capture.vcproj \
+	VisualStudio/examples/openalpp/multiple_oggstreams.dsp \
+	VisualStudio/examples/openalpp/moving.dsp \
+	VisualStudio/examples/openalpp/simple-vc7.vcproj \
+	VisualStudio/examples/openalpp/capture.dsp \
+	VisualStudio/examples/openalpp/multiple_oggstreams.vcproj \
+	VisualStudio/examples/openalpp/testfstream-vc7.vcproj \
+	VisualStudio/examples/osgalmultiple/Example_osgalmultiple.vcproj \
+	VisualStudio/examples/osgalmultiple/Example_osgalmultiple-vc7.vcproj \
+	VisualStudio/examples/osgalmultiple/Example_osgalmultiple.dsp \
+	VisualStudio/examples/osgal/Example_osgaldemo-vc7.vcproj \
+	VisualStudio/examples/osgal/Example_osgaldemo.dsp \
+	VisualStudio/examples/osgal/Example_osgaldemo.vcproj \
+	VisualStudio/examples/osgal/osgaldemo.vcproj \
+	VisualStudio/examples/osgalviewer/Example_osgalviewer-vc7.vcproj \
+	VisualStudio/examples/osgalviewer/Example_osgalviewer.dsp \
+	VisualStudio/examples/osgalviewer/Example_osgalviewer.vcproj \
+	VisualStudio/osgAL/osgAL-vc7.sln \
+	VisualStudio/osgAL/osgAL.vcproj \
+	VisualStudio/osgAL/osgAL.dsw \
+	VisualStudio/osgAL/osgAL.sln \
+	VisualStudio/osgAL/osgAL-vc7.vcproj \
+	VisualStudio/osgAL/osgAL.dsp
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = osgal.pc
 
-AUTOMAKE_OPTIONS = foreign
+#AUTOMAKE_OPTIONS = foreign
 
 ACLOCAL_AMFLAGS = -I config
