--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 #
 # Copyright (C) 2004-2006 Anders Backman, VRlab <andersb@cs.umu.se>
-# Copyright (C) 2006 Loic Dachary <loic@gnu.org>
+# Copyright (C) 2006, 2007 Loic Dachary <loic@dachary.org>
 #
 #    This library is free software; you can redistribute it and/or
 #    modify it under the terms of the GNU Lesser General Public
@@ -17,7 +17,7 @@
 #    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 #
 AC_PREREQ(2.59)
-AC_INIT(osgAL,0.6.0)
+AC_INIT(osgAL,0.6.1)
 AC_CONFIG_AUX_DIR(config)
 AM_INIT_AUTOMAKE()
 AC_CONFIG_SRCDIR([osgal.pc.in])
