--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,6 +1,6 @@
 #
 # Copyright (C) 2004-2006 Anders Backman, VRlab <andersb@cs.umu.se>
-# Copyright (C) 2006 Loic Dachary <loic@gnu.org>
+# Copyright (C) 2006, 2007 Loic Dachary <loic@dachary.org>
 #
 #    This library is free software; you can redistribute it and/or
 #    modify it under the terms of the GNU Lesser General Public
