Added Vorbis includes for osgAL and examples (Thanks to Wang Rui).

--- a/examples/osgal/CMakeLists.txt
+++ b/examples/osgal/CMakeLists.txt
@@ -10,7 +10,7 @@ add_definitions(
   -DFL_DLL
 )
 
-INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
+INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT VORBIS )
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG OSGGA OSGVIEWER OSGDB OSGUTIL )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp osgAL )
 
