--- a/examples/openalpp/CMakeLists.txt
+++ b/examples/openalpp/CMakeLists.txt
@@ -5,7 +5,7 @@ SET(EXE_NAME example_oalpp_capture)
 ADD_EXECUTABLE( ${EXE_NAME} capture.cpp )
 add_definitions( -D_CONSOLE )
 
-INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
+INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT VORBIS )	# Is VORBIS needed here ?
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
@@ -19,7 +19,7 @@ SET(EXE_NAME example_oalpp_moving)
 ADD_EXECUTABLE( ${EXE_NAME} moving.cpp )
 add_definitions( -D_CONSOLE )
 
-INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
+INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT VORBIS )	# Is VORBIS needed here ?
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
@@ -33,7 +33,7 @@ SET(EXE_NAME example_oalpp_multiple)
 ADD_EXECUTABLE( ${EXE_NAME} multiple.cpp )
 add_definitions( -D_CONSOLE )
 
-INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
+INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT VORBIS )	# Is VORBIS needed here ?
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
@@ -47,7 +47,7 @@ SET(EXE_NAME example_oalpp_multiple_oggstreams)
 ADD_EXECUTABLE( ${EXE_NAME} multiple_oggstreams.cpp )
 add_definitions( -D_CONSOLE )
 
-INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
+INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT VORBIS )	# Is VORBIS needed here ?
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
@@ -61,7 +61,7 @@ SET(EXE_NAME example_oalpp_playOgg)
 ADD_EXECUTABLE( ${EXE_NAME} playOgg.cpp )
 add_definitions( -D_CONSOLE )
 
-INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
+INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT VORBIS )	# Is VORBIS needed here ?
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
@@ -75,7 +75,7 @@ SET(EXE_NAME example_oalpp_simple)
 ADD_EXECUTABLE( ${EXE_NAME} simple.cpp )
 add_definitions( -D_CONSOLE )
 
-INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
+INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT VORBIS )	# Is VORBIS needed here ?
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
@@ -89,7 +89,7 @@ SET(EXE_NAME example_oalpp_testfstream)
 ADD_EXECUTABLE( ${EXE_NAME} testfstream.cpp )
 add_definitions( -D_CONSOLE )
 
-INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
+INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT VORBIS )	# Is VORBIS needed here ?
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
