--- a/src/osgAL/CMakeLists.txt
+++ b/src/osgAL/CMakeLists.txt
@@ -27,10 +27,11 @@ ADD_LIBRARY(
 add_definitions( 
   -DOSGAL_LIBRARY
   #-DWIN32
-  #-D_DEBUG,USE_COLOSSEUM3Dx
+  #-DUSE_COLOSSEUM3Dx
   #-D_WINDOWS
 )
 
+INCLUDE_WITH_VARIABLES( ${EXE_NAME} VORBIS )
 LINK_WITH_VARIABLES( ${LIB_NAME} OPENAL ALUT OSG OSGDB OSGUTIL OPENTHREADS )
 TARGET_LINK_LIBRARIES( ${LIB_NAME} openalpp )
 
