Fixed stupid copy-paste.

--- a/src/osgAL/CMakeLists.txt
+++ b/src/osgAL/CMakeLists.txt
@@ -31,7 +31,7 @@ add_definitions(
   #-D_WINDOWS
 )
 
-INCLUDE_WITH_VARIABLES( ${EXE_NAME} VORBIS )
+INCLUDE_WITH_VARIABLES( ${LIB_NAME} VORBIS )
 LINK_WITH_VARIABLES( ${LIB_NAME} OPENAL ALUT OSG OSGDB OSGUTIL OPENTHREADS )
 TARGET_LINK_LIBRARIES( ${LIB_NAME} openalpp )
 
