--- a/src/osgPlugin/CMakeLists.txt
+++ b/src/osgPlugin/CMakeLists.txt
@@ -23,7 +23,7 @@ add_definitions(
   # -D_WINDOWS
 )
 
-LINK_WITH_VARIABLES( ${LIB_NAME} OSGDB OSG OSGDB OPENTHREADS ALUT OPENAL VORBIS VORBISFILE OGG )
+LINK_WITH_VARIABLES( ${LIB_NAME} OSGDB OSG OSGDB OPENTHREADS ALUT OPENAL OGG VORBIS VORBISFILE )
 #OPENAL ALUT 
 TARGET_LINK_LIBRARIES( ${LIB_NAME} openalpp osgAL )
 #winmm
