--- a/src/osgAL/CMakeLists.txt
+++ b/src/osgAL/CMakeLists.txt
@@ -35,8 +35,10 @@ INCLUDE_WITH_VARIABLES( ${LIB_NAME} OGG VORBIS )
 LINK_WITH_VARIABLES( ${LIB_NAME} OPENAL ALUT OSG OSGDB OSGUTIL OPENTHREADS )
 TARGET_LINK_LIBRARIES( ${LIB_NAME} openalpp )
 
-# Ugly workaround to remove the "/debug" or "/release" in each output
-SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "../")
-SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES IMPORT_PREFIX "../")
-
+IF(MSVC_IDE)
+	# Ugly workaround to remove the "/debug" or "/release" in each output
+	SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "../")
+	SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES IMPORT_PREFIX "../")
+ENDIF()
+	
 INCLUDE(ModuleInstall OPTIONAL)
