--- a/src/osgPlugin/CMakeLists.txt
+++ b/src/osgPlugin/CMakeLists.txt
@@ -28,8 +28,10 @@ LINK_WITH_VARIABLES( ${LIB_NAME} OSGDB OSG OSGDB OPENTHREADS ALUT OPENAL OGG VOR
 TARGET_LINK_LIBRARIES( ${LIB_NAME} openalpp osgAL )
 #winmm
 
-# Ugly workaround to remove the "/debug" or "/release" in each output
-SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "../")
-SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES IMPORT_PREFIX "../")
-
+IF(MSVC_IDE)
+	# Ugly workaround to remove the "/debug" or "/release" in each output
+	SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "../")
+	SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES IMPORT_PREFIX "../")
+ENDIF()
+	
 INCLUDE(ModuleInstall OPTIONAL)
