--- a/src/openalpp/CMakeLists.txt
+++ b/src/openalpp/CMakeLists.txt
@@ -1,5 +1,5 @@
 SET(LIB_NAME openalpp)
-SET(HEADER_PATH ${osgAL_SOURCE_DIR}/include/${LIB_NAME})
+SET(HEADER_PATH "${osgAL_SOURCE_DIR}/include/${LIB_NAME}")
 SET(OSGAL_USER_DEFINED_DYNAMIC_OR_STATIC SHARED)
 
 SET(LIB_PUBLIC_HEADERS
