Fixed output dir under non-MSVC (removed .. for unices) for OpenAL++ examples

--- a/examples/openalpp/CMakeLists.txt
+++ b/examples/openalpp/CMakeLists.txt
@@ -9,7 +9,10 @@ INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT OGG VORBIS )
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
-SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+IF(MSVC_IDE)
+	# Ugly workaround to remove the "/debug" or "/release" in each output
+	SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+ENDIF()
 
 
 #########################################
@@ -23,7 +26,10 @@ INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT OGG VORBIS )
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
-SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+IF(MSVC_IDE)
+	# Ugly workaround to remove the "/debug" or "/release" in each output
+	SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+ENDIF()
 
 
 #########################################
@@ -37,7 +43,10 @@ INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT OGG VORBIS )
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
-SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+IF(MSVC_IDE)
+	# Ugly workaround to remove the "/debug" or "/release" in each output
+	SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+ENDIF()
 
 
 #########################################
@@ -51,7 +60,10 @@ INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT OGG VORBIS )
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
-SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+IF(MSVC_IDE)
+	# Ugly workaround to remove the "/debug" or "/release" in each output
+	SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+ENDIF()
 
 
 #########################################
@@ -65,7 +77,10 @@ INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT OGG VORBIS )
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
-SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+IF(MSVC_IDE)
+	# Ugly workaround to remove the "/debug" or "/release" in each output
+	SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+ENDIF()
 
 
 #########################################
@@ -79,7 +94,10 @@ INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT OGG VORBIS )
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
-SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+IF(MSVC_IDE)
+	# Ugly workaround to remove the "/debug" or "/release" in each output
+	SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+ENDIF()
 
 
 #########################################
@@ -93,4 +111,8 @@ INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT OGG VORBIS )
 LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
 TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
 SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
-SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+IF(MSVC_IDE)
+	# Ugly workaround to remove the "/debug" or "/release" in each output
+	SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
+ENDIF()
+
