--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,17 @@ IF(WIN32)
 ENDIF(WIN32)
 
 
+IF(UNIX AND NOT WIN32 AND NOT APPLE)
+  IF(CMAKE_SIZEOF_VOID_P MATCHES "8")
+      SET(LIB_POSTFIX "64" CACHE STRING "suffix for 32/64 dir placement")
+      MARK_AS_ADVANCED(LIB_POSTFIX)
+  ENDIF()
+ENDIF()
+IF(NOT DEFINED LIB_POSTFIX)
+    SET(LIB_POSTFIX "")
+ENDIF()
+
+
 ################################################################################
 # Create bin and lib directories if required
 
